--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>LittleLink</title>
+  <title>Queazified - Links</title>
   <meta name="description" content="https://littlelink.io">
   <meta name="author" content="Seth Cottle">
 
@@ -74,10 +74,10 @@
         <img src="images/littlelink.svg" class="avatar" srcset="images/littlelink.svg 2x" alt="">
 
         <!-- Title -->
-        <h1 role="heading">LittleLink</h1>
+        <h1 role="heading">Andrey (also known as Queazified)</h1>
 
         <!-- Short Bio -->
-        <p>An open source DIY Linktree alternative.</p>
+        <p>A person that is into technology - I run my own Home Lab!</p>
 
         <!--
 
@@ -190,7 +190,7 @@
         <a class="button button-flickr" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/flickr.svg" alt="Flickr Logo">Flickr</a><br>
 
         <!-- GitHub -->
-        <a class="button button-github" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a><br>
+        <a class="button button-github" href="https://github.com/queazified" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a><br>
 
         <!-- GitLab -->
         <a class="button button-gitlab" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/gitlab.svg" alt="GitLab Logo">GitLab</a><br>
@@ -268,7 +268,7 @@
         <a class="button button-patreon" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/patreon.svg" alt="Patreon Logo">Patreon</a><br>
 
         <!-- PayPal -->
-        <a class="button button-paypal" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/paypal.svg" alt="PayPal Logo">PayPal</a><br>
+        <a class="button button-paypal" href="https://paypal.me/andreycohai" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/paypal.svg" alt="PayPal Logo">PayPal</a><br>
 
         <!-- Pinterest -->
         <a class="button button-pinterest" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/pinterest.svg" alt="Pinterest Logo">Pinterest</a><br>
@@ -304,7 +304,7 @@
         <a class="button button-soundcloud" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a><br>
 
         <!-- Spotify -->
-        <a class="button button-spotify" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Listen on Spotify</a><br>
+        <a class="button button-spotify" href="https://open.spotify.com/user/fantasticvideosspotify?si=jIkkWiHERBKTV6LDjWLdDw" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Listen on Spotify</a><br>
 
         <!-- Spotify Alt -->
         <a class="button button-spotify-alt" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify-alt.svg" alt="Spotify Logo">Listen on Spotify</a><br>
