--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <a class="button button-discogs-alt" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discogs-alt.svg" alt="Discogs Logo">Discogs</a><br>
 
         <!-- Discord -->
-        <a class="button button-discord" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a><br>
+        <a class="button button-discord" href="https://discordapp.com/users/456507167361728532" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a><br>
 
         <!-- Dribbble -->
         <a class="button button-dribbble" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/dribbble.svg" alt="Dribbble Logo">Dribbble</a><br>
@@ -283,10 +283,10 @@
         <a class="button button-redbubble" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/redbubble.svg" alt="Redbubble Logo">Redbubble</a><br>
 
         <!-- Reddit -->
-        <a class="button button-reddit" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/reddit.svg" alt="Reddit Logo">Reddit</a><br>
+        <a class="button button-reddit" href="https://www.reddit.com/user/krazsms/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/reddit.svg" alt="Reddit Logo">Reddit</a><br>
 
         <!-- Revolut -->
-        <a class="button button-revolut" href="" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/revolut.svg" alt="Revolut Logo">Revolut</a><br>
+        <a class="button button-revolut" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/revolut.svg" alt="Revolut Logo">Revolut</a><br>
         
         <!-- Shop -->
         <a class="button button-shop" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/shop.svg" alt="Shop Logo">Buy with Shop</a><br>
@@ -307,7 +307,7 @@
         <a class="button button-spotify" href="https://open.spotify.com/user/fantasticvideosspotify?si=jIkkWiHERBKTV6LDjWLdDw" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Listen on Spotify</a><br>
 
         <!-- Spotify Alt -->
-        <a class="button button-spotify-alt" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify-alt.svg" alt="Spotify Logo">Listen on Spotify</a><br>
+        <a class="button button-spotify-alt" href="https://open.spotify.com/user/31rgmkqlpwbmebeho5q3cdnw6oii?si=e26ec1658a24455c" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify-alt.svg" alt="Spotify Logo">Listen on Spotify</a><br>
 
         <!-- Square -->
         <a class="button button-square" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/square.svg" alt="Square Logo">Buy with Square</a><br>
