--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         <a class="button button-threema" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/threema.svg" alt="Threema Logo">Threema</a><br>
 
         <!-- TikTok -->
-        <a class="button button-tiktok" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a><br>
+        <a class="button button-tiktok" href="https://www.tiktok.com/@queazified?is_from_webapp=1&sender_device=pc" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a><br>
 
         <!-- Trakt -->
         <a class="button button-trakt" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/trakt.svg" alt="Trakt Logo">Trakt</a><br>
@@ -403,10 +403,10 @@
         <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-computer.svg" alt="Computer Icon">Homelab Setup</a><br>
 
         <!-- Generic Email -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Email Us</a><br>
+        <a class="button button-default" href="mailto:andrey@queazified.co.uk" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Email Us</a><br>
 
         <!-- Generic Email Alt -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email-alt.svg" alt="Email Icon">Email Us</a><br>
+        <a class="button button-default" href="mailto:andrey@queazified.link" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email-alt.svg" alt="Email Icon">Email Us</a><br>
 
         <!-- Generic Homepage -->
         <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-homepage.svg" alt="Homepage Icon">Visit Homepage</a><br>
@@ -441,7 +441,7 @@
             This also includes a link to the LittleLink repository to make forking LittleLink easier.
             You can edit or remove anything here to make your own footer.
         -->
-        <p><a href="privacy.html">Privacy Policy</a> | Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener" role="button">LittleLink</a>.</p>
+        <p><a href="privacy.html">Privacy Policy</a> | Made with 🩵 by Queazified" target="_blank" rel="noopener" role="button">LittleLink</a>.</p>
 
       </div>
     </div>
