Updated README with warning

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta charset="utf-8">
   <title>Queazified - Links</title>
   <meta name="description" content="https://littlelink.io">
-  <meta name="author" content="Seth Cottle">
+  <meta name="author" content="Andrey Cohai">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -71,10 +71,10 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/littlelink.svg" class="avatar" srcset="images/littlelink.svg 2x" alt="">
+        <img src="images/ac58c511be4ba61e41d2e6836fc88604ebb188804fa3ff90e559a0d2cf3292e3.png" class="avatar" srcset="images/ac58c511be4ba61e41d2e6836fc88604ebb188804fa3ff90e559a0d2cf3292e3.png 2x" alt="Profile Picture">
 
         <!-- Title -->
-        <h1 role="heading">Andrey (also known as Queazified)</h1>
+        <h1 role="heading">Andrey (aka Queazified)</h1>
 
         <!-- Short Bio -->
         <p>A person that is into technology - I run my own Home Lab!</p>
@@ -232,7 +232,7 @@
         <a class="button button-ko-fi" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/ko-fi.svg" alt="Ko-fi Logo">Ko-fi</a><br>
 
         <!-- Last.fm -->
-        <a class="button button-last-fm" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/last-fm.svg" alt="">Last.fm</a><br>
+        <a class="button button-last-fm" href="https://www.last.fm/user/kraszms" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/last-fm.svg" alt="">Last.fm</a><br>
 
         <!-- Letterboxd -->
         <a class="button button-letterboxd" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/letterboxd.svg" alt="">Letterboxd</a><br>
@@ -260,9 +260,6 @@
         
         <!-- Notion -->
         <a class="button button-notion" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/notion.svg" alt="Notion Logo">Notion</a><br>
-
-        <!-- OnlyFans -->
-        <a class="button button-onlyfans" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/onlyfans.svg" alt="OnlyFans Logo">OnlyFans (18+)</a><br>
 
         <!-- Patreon -->
         <a class="button button-patreon" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/patreon.svg" alt="Patreon Logo">Patreon</a><br>
@@ -304,10 +301,10 @@
         <a class="button button-soundcloud" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a><br>
 
         <!-- Spotify -->
-        <a class="button button-spotify" href="https://open.spotify.com/user/fantasticvideosspotify?si=jIkkWiHERBKTV6LDjWLdDw" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Listen on Spotify</a><br>
+        <a class="button button-spotify" href="https://open.spotify.com/user/fantasticvideosspotify?si=jIkkWiHERBKTV6LDjWLdDw" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Spotify</a><br>
 
         <!-- Spotify Alt -->
-        <a class="button button-spotify-alt" href="https://open.spotify.com/user/31rgmkqlpwbmebeho5q3cdnw6oii?si=e26ec1658a24455c" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify-alt.svg" alt="Spotify Logo">Listen on Spotify</a><br>
+        <a class="button button-spotify-alt" href="https://open.spotify.com/user/31rgmkqlpwbmebeho5q3cdnw6oii?si=e26ec1658a24455c" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify-alt.svg" alt="Spotify Logo">Alternative Spotify Account</a><br>
 
         <!-- Square -->
         <a class="button button-square" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/square.svg" alt="Square Logo">Buy with Square</a><br>
@@ -376,10 +373,10 @@
         <a class="button button-wordpress" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/wordpress.svg" alt="WordPress Logo">WordPress</a><br>
 
         <!-- X -->
-        <a class="button button-x" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/x.svg" alt="X Logo">Follow on X</a><br>
+        <a class="button button-x" href="https://x.com/Queazified" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/x.svg" alt="X Logo">Follow on X</a><br>
 
         <!-- YouTube -->
-        <a class="button button-yt" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/youtube.svg" alt="YouTube Logo">YouTube</a><br>        
+        <a class="button button-yt" href="https://youtube.com/@queazified?si=1Hx_gI_EzvZyR_Pa" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/youtube.svg" alt="YouTube Logo">YouTube</a><br>        
 
         <!-- YouTube Music -->
         <a class="button button-yt" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/youtube-music.svg" alt="YouTube Music Logo">Listen on YouTube Music</a><br>
@@ -441,7 +438,7 @@
             This also includes a link to the LittleLink repository to make forking LittleLink easier.
             You can edit or remove anything here to make your own footer.
         -->
-        <p><a href="privacy.html">Privacy Policy</a> | Made with 🩵 by Queazified" target="_blank" rel="noopener" role="button">LittleLink</a>.</p>
+        <p><a href="privacy.html">Privacy Policy</a> | Made with 🩵 by Queazified.</p>
 
       </div>
     </div>
