--- a/privacy.html
+++ b/privacy.html
@@ -152,7 +152,7 @@
             You can edit or remove anything here to make your own footer.
            -->
           <center>
-            <p>Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener">LittleLink</a>.</p>
+            <p>Made with 🩵 by Queazified.</p>
           </center>
         </div>
       </div>
