Updated privacy.html, removed unneeded social media's, updated Short bio, added socials and updated them with links in index.html

--- a/privacy.html
+++ b/privacy.html
@@ -80,14 +80,13 @@
             <br />
             <br />
             <!-- Here you can add any analytics companies you use and what they track -->
-            <b>1.) Example LLC.</b><br />
+            <b>1.) Cloudflare, Inc</b><br />
             Personal Data:
             <i
-              >various types of Data as specified in the privacy policy of the
-              service</i
+              >Various types of data including IP addresses and usage statistics.</i
             ><br />
-            <a href="https://example.com/privacy/"
-              >Privacy Policy</a
+            <a href="https://www.cloudflare.com/privacypolicy/"
+              >Cloudflare Privacy Policy</a
             >
           </p>
           <!-- End Section -->
@@ -104,17 +103,167 @@
             <br />
             <br />
             <!-- Add any external cdn's and they use and what they track -->
-            <b>1.) Example LLC</b><br />
+            <b>1.) Discord</b><br />
             Personal Data:
             <i
-              >Usage Data; various types of Data as specified in the privacy
-              policy of the service</i
+              >Discord may collect usage data such as IP addresses, browser type, and interactions with Discord widgets embedded on the site.</i
             >
             <br />
-            <a href="https://example.com/privacy/"
-              >Privacy Policy</a
+            <a href="https://discord.com/privacy/"
+              >Discord Privacy Policy</a
             >
-          </p>
+            </p>
+            <b>2.) GitHub</b><br />
+            Personal Data:
+            <i
+              >GitHub can gather data on interactions such as IP addresses, referral data, and activity related to GitHub projects or embedded content.</i
+            >
+            <br />
+            <a href="https://docs.github.com/en/site-policy/privacy-policies"
+             >Privacy Policies</a
+            >
+            </p>
+            <b>3.) GitLab</b><br />
+            Personal Data:
+            <i
+              >GitLab may collect information such as IP addresses, browser information, and activity related to GitLab content embedded on the site.</i
+            >
+            <br />
+            <a href="https://about.gitlab.com/privacy/"
+             >GitLab Privacy Statement</a
+            >
+            </p>
+            <b>4.) Instagram</b><br />
+            Personal Data:
+            <i
+              >Instagram may track interactions including IP addresses, device information, and engagement with Instagram posts or widgets.</i
+            >
+            <br />
+            <a href="https://help.instagram.com/519522125107875"
+             >Meta Privacy Policy - How Meta collects and uses user data</a
+            >
+            </p>
+            <b>5.) Last.fm</b><br />
+            Personal Data:
+            <i
+              >Last.fm may collect data such as IP addresses and listening activity, as well as interactions with embedded Last.fm widgets.</i
+            >
+            <br />
+            <a href="https://www.last.fm/legal/terms"
+             >Terms of Use</a
+            >
+            </p>
+            <b>6.) PayPal</b><br />
+            Personal Data:
+            <i
+              >PayPal can collect information such as IP addresses, transaction details, and interactions with PayPal buttons or payment widgets.</i
+            >
+            <br />
+            <a href="https://www.paypal.com/us/webapps/mpp/ua/privacy-full"
+             >PayPal Privacy Statement</a
+            >
+            </p>
+            <b>7.) Reddit</b><br />
+            Personal Data:
+            <i
+              >Reddit may collect usage data including IP addresses, user interactions with Reddit posts, and referral information from embedded Reddit content.</i
+            >
+            <br />
+            <a href="https://www.reddit.com/policies/privacy-policy"
+             >Reddit Privacy Policy</a
+            >
+            </p>
+            <b>8.) Spotify</b><br />
+            Personal Data:
+            <i
+              >Spotify may collect information such as IP addresses, device data, and interactions with Spotify widgets or content embedded on the site.</i
+            >
+            <br />
+            <a href="https://www.spotify.com/us/legal/privacy-policy/"
+             >Spotify Privacy Policy</a
+            >
+            </p>
+            <b>9 .) Steam</b><br />
+            Personal Data:
+            <i
+              >Steam may collect usage data including IP addresses, interactions with Steam content, and user engagement with embedded Steam elements.</i
+            >
+            <br />
+            <a href="https://store.steampowered.com/privacy_agreement/"
+             >Privacy Policy Agreement</a
+            >
+            </p>
+            <b>10.) Telegram</b><br />
+            Personal Data:
+            <i
+              >Telegram may track data such as IP addresses, device information, and interactions with Telegram buttons or widgets.</i
+            >
+            <br />
+            <a href="https://telegram.org/privacy"
+             >Telegram Privacy Policy</a
+            >
+            </p>
+            <b>11.) Threads</b><br />
+            Personal Data:
+            <i
+              >Threads may collect information such as IP addresses, interactions with Threads content, and referral data from embedded Threads elements.</i
+            >
+            <br />
+            <a href="https://help.instagram.com/515230437301944"
+             >Threads Supplemental Privacy Policy</a
+            >
+            </p>
+            <b>12.) TikTok</b><br />
+            Personal Data:
+            <i
+              >TikTok may collect usage data including IP addresses, device information, and engagement with TikTok videos or widgets.</i
+            >
+            <br />
+            <a href="https://www.tiktok.com/legal/privacy-policy"
+             >Privacy Policy</a
+            >
+            </p>
+            <b>13.) Twitch</b><br />
+            Personal Data:
+            <i
+              >Twitch may collect data such as IP addresses, viewing activity, and interactions with Twitch streams or embedded content.</i
+            >
+            <br />
+            <a href="https://www.twitch.tv/p/en/legal/privacy-notice/"
+             >Twitch.tv Privacy Notice</a
+            >
+            </p>
+            <b>14.) Gravatar</b><br />
+            Personal Data:
+            <i
+              >Gravatar may collect IP addresses, email addresses, and interactions with Gravatar images or content.</i
+            >
+            <br />
+            <a href="https://automattic.com/privacy/"
+             >Automattic Privacy Policy</a
+            >
+            </p>
+            <b>15.) X (formerly Twitter)</b><br />
+            Personal Data:
+            <i
+              >X may track usage data such as IP addresses, device information, and interactions with X content or buttons.</i
+            >
+            <br />
+            <a href="https://x.com/en/privacy"
+             >
+             X Privacy Policy</a
+            >
+            </p>
+            <b>16.) YouTube</b><br />
+            Personal Data:
+            <i
+              >YouTube may collect IP addresses, device information, and interactions with embedded YouTube videos or content.</i
+            >
+            <br />
+            <a href="https://policies.google.com/privacy?hl=en"
+             >Privacy Policy - Privacy & Terms - Google</a
+            >
+            </p>
           <!-- End Section -->
 
           <!-- Start Section -->
@@ -131,14 +280,13 @@
             <br />
             <br />
             <!-- Here you can add any hosting companies you use and what they track -->
-            <b>1.) Example LLC.</b><br />
+            <b>1.) InfinityFree (aka Epizy.com)</b><br />
             Personal Data:
             <i
-              >various types of Data as specified in the privacy policy of the
-              service</i
+              >InfinityFree may request and store many kinds of Personal Data as described in their listed privacy policy which include but not limited to addresses IP, server log and all other technical data associated with website hosting.</i
             >
             <br />
-            <a href="https://example.com/privacy"
+            <a href="https://www.infinityfree.com/privacy/"
               >Privacy Policy</a
             >
           </p>
