Updated index.html to update "Short Bio"

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h1 role="heading">Andrey (aka Queazified)</h1>
 
         <!-- Short Bio -->
-        <p>Home Lab Nerd | Ex Content Creator | 🇬🇧 🇷🇴 | Professional "Smart Ass"</p>
+        <p>Home Lab Nerd | Ex Content Creator | Heavy Music Listener | 🇬🇧 🇷🇴 | Professional "Smart Ass"</p>
 
         <!--
 
