--- a/privacy.html
+++ b/privacy.html
@@ -300,7 +300,7 @@
             You can edit or remove anything here to make your own footer.
            -->
           <center>
-            <p><a href="index.html">Go back</a> | Made with 🩵 by Queazified.</p>
+            <p><a href="/">Go back</a> | Made with 🩵 by Queazified.</p>
           </center>
         </div>
       </div>
