Update commit; index.html* privacy.html*
Updated title for index.html from "Queazified - Links" to "{Name provided} - Queazified.co.uk"

Added information for privacy.html - Freeola (partnered with GetDotted)
Added legal privacy policies for both websites.

@queazified commited this update

--- a/privacy.html
+++ b/privacy.html
@@ -6,9 +6,9 @@
     <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
-    <title>LittleLink Privacy Policy</title>
+    <title>Queazified.co.uk Privacy Policy</title>
     <meta name="description" content="https://littlelink.io" />
-    <meta name="author" content="Seth Cottle" />
+    <meta name="author" content="Andrey Cohai" />
 
     <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -290,6 +290,20 @@
               >Privacy Policy</a
             >
           </p>
+          <b>2.) Freeola (partnered with GetDotted)</b><br />
+          Personal Data:
+          <i
+            >IP addresses, browser type, operating system, referral URLs, device information, pages visited, timestamps, and other technical data required for website operation, analytics, and security purposes as specified in the privacy policies of the services.</i
+          >
+          <br />
+          <a href="https://freeola.com/legal/privacy-policy.php"
+            >Freeola's Legal Privacy Policy</a
+          >
+          <br />
+          <a href="https://getdotted.com/legal/privacy-policy.php"
+            >GetDotted's Legal Privacy Policy</a
+          >
+        </p>
           <!-- End Section -->
           <br />
           <br />
