--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Page Information
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Queazified - Links</title>
+    <title>Andrey (@Queazified) - Queazified.co.uk</title>
     <meta name="description" content="https://littlelink.io">
     <meta name="author" content="Andrey Cohai">
   
