--- a/privacy.html
+++ b/privacy.html
@@ -43,25 +43,8 @@
           <p>
             <a href="/">⬅️ Back to main page</a>
           </p>
-
-          <!--
-            Privacy Policy:
-            We recommend adding a Privacy Policy to your LittleLink. Adding one can help you stay compliant 
-            with different privacy legislation and can also help set expectations for your site visitors.
-
-            This is a boilerplate, what is here may not be applicable to you. By default, we give three sections...
-
-            Analytics: where you can add links to analytic services.
-
-            Content From External Platforms: This could be used for CDN services or additional buttons like GitHub hotlinkable buttons.
-
-            Hosting and Backend Infrastructure: For where you host your LittleLink.
-
-            You can remove, edit, and add to these as necessary for your project. 
-          -->
-
           <!-- Page Name -->
-          <h1>🔒 Privacy Overview</h1>
+          <h1>🔒 Privacy Overview @ Queazified.co.uk</h1>
 
           <!-- Page Information -->
           <p>
@@ -79,7 +62,6 @@
             behavior.
             <br />
             <br />
-            <!-- Here you can add any analytics companies you use and what they track -->
             <b>1.) Cloudflare, Inc</b><br />
             Personal Data:
             <i
@@ -102,7 +84,6 @@
             pages where the service is installed, even when Users do not use it.
             <br />
             <br />
-            <!-- Add any external cdn's and they use and what they track -->
             <b>1.) Discord</b><br />
             Personal Data:
             <i
@@ -279,7 +260,6 @@
             the actual location where the Personal Data are stored.
             <br />
             <br />
-            <!-- Here you can add any hosting companies you use and what they track -->
             <b>1.) InfinityFree (aka Epizy.com)</b><br />
             Personal Data:
             <i
@@ -304,23 +284,13 @@
             >GetDotted's Legal Privacy Policy</a
           >
         </p>
-          <!-- End Section -->
           <br />
           <br />
-          
-          <!-- 
-            Footer:
-            This includes a link to the LittleLink repository to make forking LittleLink easier.
-            You can edit or remove anything here to make your own footer.
-           -->
           <center>
             <p><a href="/">Go back</a> | Made with 🩵 by Queazified.</p>
           </center>
         </div>
       </div>
     </div>
-
-    <!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   </body>
 </html>
